Update configuration file

--- a/hubpress/config.json
+++ b/hubpress/config.json
@@ -1,1 +1,1 @@
-{"meta":{"username":"iPaddy","repositoryName":"mySite","branch":"gh-pages"},"site":{"title":"OpenLetters","url":"http://iPaddy.github.io/mySite"},"socialnetwork":{},"theme":{"name":"Casper","url":"http://iPaddy.github.io/mySite/themes/Casper"}}
+{"meta":{"username":"iPaddy","repositoryName":"mySite","branch":"gh-pages"},"site":{"title":"OpenLetters","description":"Random thoughts about random things","url":"http://iPaddy.github.io/mySite"},"socialnetwork":{},"theme":{"name":"Casper","url":"http://iPaddy.github.io/mySite/themes/Casper"}}
